# canister_monitor

./: Cargo.toml  README.md  canister_ids.json  dfx.json  did.sh  package-lock.json  package.json
src/monitor_canister_backend/: Cargo.toml  monitor_canister_backend.did
src/monitor_canister_backend/src/: archive.rs  canister_management.rs  canister_status.rs  cdk_runtime.rs  get_canister_status.rs  lib.rs  memory.rs  see  stable-vec.rs  state.rs  store_canister_status.rs  types.rs
src/monitor_canister_frontend/: package.json
src/monitor_canister_frontend/src/: App.jsx  CyclesConsumedChart.jsx  MemoryChart.jsx  ModuleHashChart.jsx
