[package]
name = "monitor_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.4"
serde = "1.0.202"

# Add the ledger_canister_core dependency
# ledger_canister_core = { git = "https://github.com/dfinity/ic.git", path = "rs/rosetta-api/ledger_canister_core" }
ic-base-types =   { git = "https://github.com/dfinity/ic", branch = "master" }
ic-canister-log = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", branch = "master" }
async-trait = "0.1"
ic-ledger-hash-of = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-utils = { git = "https://github.com/dfinity/ic", branch = "master" }